# findtext-textfile-rs

./: Cargo.toml  README.md
.github/workflows/: release-executable.yaml
src/: lib.rs  main.rs
src/core/: file.rs  search.rs
tests/: csv.rs  error.rs  txt-sjis.rs  txt.rs
tests/fixtures/: file1.css  file1.csv  file1.html  file1.js  file1.md  file1.scss  file1.toml  file1.ts  file1.tsv  file1.txt  file1.xml  file1.yaml  file2-sjis.txt
